# learn-cmake

./: CMakeLists.txt  main.cpp
cmake/: FindMyLib.cmake
mylib/include/: MyLib.h
mylib/lib/: mylib.lib
mylib/src/: MyLib.cpp
